Fixed filter count

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 
                 <div id="stream-footer" class="pull-right">
                     Articles Shown:&nbsp;
-                       <span ng-if="articles.length > 0" class="badge">{{filterCount}}</span>
+                       <span ng-if="articles.length > 0" class="badge">{{filter.count}}</span>
                 </div>
                 <div class="btn-group stream-action" id="trash" ng-init="cbxTrash = 0">
                     <button 	type="button"
