Added RSSLite Service

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <script src="scripts/services/books.service.js"></script>
     <script src="scripts/services/data-source.service.js"></script>
     <script src="scripts/services/filter.service.js"></script>
+    <script src="scripts/services/rss-lite.service.js"></script>
 
     <!-- tools -->
     <script src="scripts/tools/array.tools.js"></script>
