Added user service

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <script src="scripts/services/books.service.js"></script>
     <script src="scripts/services/data-source.service.js"></script>
     <script src="scripts/services/filter.service.js"></script>
+    <script src="scripts/services/user.service.js"></script>
     <script src="scripts/services/rss-lite.service.js"></script>
 
     <!-- tools -->
