--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="scripts/controllers/export.controller.js"></script>
     <script src="scripts/controllers/feed.controller.js"></script>
     <script src="scripts/controllers/page.controller.js"></script>
+    <script src="scripts/controllers/subject.controller.js"></script>
     <script src="scripts/controllers/username-modal.controller.js"></script>
     <script src="scripts/controllers/viewer.controller.js"></script>
     
@@ -102,8 +103,8 @@
         	<div id="center" class="column" ng-controller="ViewerCtrl" ng-cloak>
             	<div class="article-view"  ng-model="article" data-scroll-to-top="articles[currentIndex]">
                     <div id="content-wrapper">
-                        <div id="subject">
-                            TREES//SPRUCE
+                        <div id="subject" ng-controller="SubjectCtrl">
+                            {{subject(articles[currentIndex])}}
                         </div>
 
                         <ol id="overflow-menu" class="nya-bs-select dropdown form-control"
