--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
                 <div class="pull-left" style="font-size: .35em">
                 	v0.5.1
                 </div>
-                <div class="btn btn-default pull-right" ng-click="saveState()">
-                	<span class="glyphicon glyphicon-bullhorn"></span> 
-                    <div class="ico-text-2">&nbsp;Send Feedback</div>
-                </div>
+                <a href="mailto:conduit@nga.mil">
+                    <div class="btn btn-default pull-right" ng-click="saveState()">
+                        <span class="glyphicon glyphicon-bullhorn"></span> 
+                        <div class="ico-text-2">&nbsp;Send Feedback</div>
+                    </div>
+                </a>
             </div>
         </div>
     
