--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/directives/subject.directive.js"></script>
 
     <!-- services -->
+    <script src="scripts/services/api.service.js"></script>
     <script src="scripts/services/articles.service.js"></script>
     <script src="scripts/services/attributes.service.js"></script>
     <script src="scripts/services/books.service.js"></script>
