--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                     <div id="content-wrapper">
                         <subject id="subject" class="subject" ng-controller="SubjectCtrl">
                         </subject>
-                        <ol id="overflow-menu" class="nya-bs-select dropdown form-control"
-                            ng-model="selectedBook">
+                        <ol id="overflow-menu" class="nya-bs-select dropdown form-control" ng-model="overflow-menu">
                             <li>
                                 
                                 <a href="{{articles[currentIndex].link}}" target="_blank">
