Edits sent to api

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                                     e-class="title edit-field"
                                     e-form="articleEdit"
                                     editable-textarea="articles[currentIndex].title"
+                                    onaftersave="submitEdit()"
                                     blur="submit">
                                 {{articles[currentIndex].title}}
                             </div>
@@ -184,6 +185,7 @@
                                     e-class="text edit-field"
                                     e-form="articleEdit"
                                     editable-textarea="articles[currentIndex].text"
+                                    onaftersave="submitEdit()"
                                     blur="submit">
                                <!-- <button id="btn-text" class="btn btn-edit" ng-click="textEdit.$show()" ng-hide="textEdit.$visible">
                                     <span class="glyphicon glyphicon-pencil"></span>
