Edit only registers if actual change occured

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                                     e-class="title edit-field"
                                     e-form="articleEdit"
                                     editable-textarea="articles[currentIndex].title"
+                                    onbeforesave="cacheOldValues()"
                                     onaftersave="submitEdit()"
                                     blur="submit">
                                 {{articles[currentIndex].title}}
