Team name displayed in UI

--- a/index.html
+++ b/index.html
@@ -427,6 +427,9 @@
                                 <!--<div class="ico-text-3">&nbsp;Export book</div>-->
                         </button>
                     </div>
+                    <div id="team-info">
+                        {{user.teamName}}
+                    </div>
                 </div>
                 <div id="article-book" class="stream book">
                     <card	class="card"
