added image to unsupported page

--- a/public/html/unsupported.html
+++ b/public/html/unsupported.html
@@ -6,5 +6,7 @@
 
 <h3>Looks like we don't support this browser--yet. We're working on it! For the time being, please use a different browser.</h3>
 
+<img src='./resources/ie.png' style="height: 75vh"/>
+
 </body>
 </html>
